<resources>
    <string name="app_name">Discount App</string>
    <string name="discount">Discount</string>
    <string name="discount_amount">Calculate</string>
    <string name="_5">5%</string>
    <string name="_10">10%</string>
    <string name="_15">15%</string>
    <string name="_20">20%</string>
    <string name="enter_the_original_amount">Enter the Original Amount</string>
</resources>
